--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.2",
     "react-scroll": "^1.9.0",
     "scrollmagic": "^2.0.8",
